# rumkinst

./: .gitignore  Cargo.toml  LICENSE
src/: cli.rs  config.rs  error_log.rs  lib.rs  main.rs  progress_log.rs
src/config/: identifier.rs  relativepathbuf.rs
src/installer_gen/: included_files.rs  mod.rs
test_files/: rumkinst.toml
