[package]
name = "rumkinst"
version = "0.1.0"
edition = "2024"
authors = ["GlitchlessCode<talyn.veugelers@gmail.com>"]
license = "MIT"
description = "Make .sh installer scripts the easy way"
repository = "https://github.com/GlitchlessCode/rumkinst"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
figlet-rs = "0.1.5"
flate2 = "1.1.2"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
slotmap = "1.0.7"
tar = "0.4.44"
toml = "0.9.2"
